# mitmproxy-adblock

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: coverage.ini
docs/reference/: cli.md
scripts/: setup.sh
src/mitm_adblock/: __init__.py  __main__.py  adblocker.py  cli.py  utils.py
tests/: __init__.py  test_cli.py
